<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ActivityBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ibm.pickmeup.activities.PaymentSentActivity">

    <TextView
        style="@style/BigTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/processing_payment"
        android:id="@+id/paymentSentHeader"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="40dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/payment_sent_message"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/paymentSentMessage"
        android:paddingLeft="50dp"
        android:paddingRight="50dp"
        android:layout_gravity="center_horizontal|center"
        android:gravity="center"
        android:layout_below="@+id/paymentSentHeader"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:visibility="gone"/>

    <FrameLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/paymentSentPhotoFrameLayout"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/paymentSentHeader"
        android:layout_marginTop="150dp">

        <ImageView
            android:contentDescription="@string/driver_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/paymentSentDriverPhoto"
            android:src="@drawable/ic_user"
            android:padding="6dp"/>

        <ImageView
            android:contentDescription="@string/driver_photo_wrapper"
            android:src="@drawable/round"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/paymentSentDriverName"
        android:layout_below="@+id/paymentSentPhotoFrameLayout"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/BottomButton"
        android:text="@string/home"
        android:id="@+id/paymentSentHomeButton"
        android:visibility="gone"/>

</RelativeLayout>
