<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ActivityBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ibm.pickmeup.activities.DriverDetailsActivity">

    <TextView
        style="@style/BigTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/driver_found"
        android:id="@+id/driverDetailsHeader"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp" />

    <FrameLayout
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/selfieFrameLayout"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true">

        <ImageView
            android:contentDescription="@string/driver_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/driverFoundPhoto"
            android:src="@drawable/ic_user"
            android:padding="6dp"
            android:visibility="gone"/>

        <ImageView
            android:contentDescription="@string/driver_photo_wrapper"
            android:src="@drawable/round"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <ProgressBar
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/loadingPhotoProgressBar"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/driverName"
        android:layout_below="@+id/selfieFrameLayout"
        android:paddingTop="10dp"
        android:layout_centerHorizontal="true" />

    <Button
        style="@style/BottomButton"
        android:text="@string/continue_button"
        android:id="@+id/driverFoundButton"/>

</RelativeLayout>
