<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ActivityBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ibm.pickmeup.activities.LoginActivity">

    <TextView
        style="@style/BigTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/welcome_text"
        android:id="@+id/loginHeader"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="120dp"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:hint="@string/name_passenger_placeholder"
        android:ems="10"
        android:id="@+id/loginName"
        android:layout_below="@+id/loginHeader"
        android:layout_centerHorizontal="true"
        android:background="#00000000"
        android:layout_marginTop="70dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp" />

    <Button
        style="@style/BottomButton"
        android:text="@string/continue_button"
        android:id="@+id/loginButton" />
</RelativeLayout>
