<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/ActivityBackground"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.ibm.pickmeup.activities.DriverArrivedActivity">

    <TextView
        style="@style/BigTextStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/ride_is_here"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="80dp" />

    <FrameLayout
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:id="@+id/driverArrivedPhotoFrameLayout"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/paymentSentHeader"
        android:layout_marginTop="150dp">

        <ImageView
            android:contentDescription="@string/driver_photo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:id="@+id/driverArrivedPhoto"
            android:src="@drawable/ic_user"
            android:padding="6dp"/>

        <ImageView
            android:contentDescription="@string/driver_photo_wrapper"
            android:src="@drawable/round"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:id="@+id/driverArrivedName"
        android:layout_below="@+id/driverArrivedPhotoFrameLayout"
        android:layout_marginTop="10dp"
        android:layout_centerHorizontal="true" />

</RelativeLayout>
